Rewrite CI/CD workflows (IaC + app) + S3 backup fixes

--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -6,62 +6,126 @@ on:
     paths:
       - "tasky-main/**"
       - ".github/workflows/app.yml"
+  workflow_dispatch: {}
 
 permissions:
   id-token: write
   contents: read
+  security-events: write
 
 concurrency:
   group: app-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  AWS_REGION: us-east-1
+
+  # --- Adjust these if your names differ ---
+  EKS_CLUSTER_NAME: wiz-exercise
+  ECR_REPO: wiz-exercise-tasky
+
+  K8S_NAMESPACE: tasky
+  DEPLOYMENT_NAME: tasky
+  CONTAINER_NAME: tasky
+
 jobs:
-  build_scan_push_deploy:
+  build-scan-push-deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Configure AWS creds (OIDC)
+      # --- AWS auth via OIDC ---
+      - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ secrets.AWS_REGION || env.AWS_REGION }}
 
-      - name: Login to ECR
-        id: login-ecr
+      - name: Verify AWS identity
+        run: aws sts get-caller-identity
+
+      - name: Get AWS Account ID
+        id: acct
+        run: echo "AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)" >> "$GITHUB_OUTPUT"
+
+      # --- Login to ECR ---
+      - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Set image URI
-        run: |
-          IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPO_NAME }}:${{ github.sha }}"
-          echo "IMAGE_URI=${IMAGE_URI}" >> $GITHUB_ENV
+      # --- Build with Buildah (Podman-family tooling; great for your story) ---
+      - name: Build image with Buildah
+        uses: redhat-actions/buildah-build@v2
+        with:
+          context: ./tasky-main
+          containerfiles: ./tasky-main/Dockerfile
+          image: ${{ env.ECR_REPO }}
+          tags: |
+            ${{ github.sha }}
+            latest
 
-      - name: Build image (runner Docker)
+      # --- Push to ECR ---
+      - name: Push image to ECR
         run: |
-          docker build -t "${IMAGE_URI}" ./tasky-main
+          ACCOUNT_ID="${{ steps.acct.outputs.AWS_ACCOUNT_ID }}"
+          REGION="${{ secrets.AWS_REGION || env.AWS_REGION }}"
+          ECR_URI="${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com"
+          IMAGE_URI="${ECR_URI}/${{ env.ECR_REPO }}:${{ github.sha }}"
 
-      - name: Trivy scan image (fail HIGH/CRITICAL)
-        uses: aquasecurity/trivy-action@0.28.0
+          # Tag local buildah image and push
+          buildah tag "${{ env.ECR_REPO }}:${{ github.sha }}" "${IMAGE_URI}"
+          buildah push "${IMAGE_URI}"
+
+          echo "IMAGE_URI=${IMAGE_URI}" >> "$GITHUB_ENV"
+          echo "Pushed ${IMAGE_URI}"
+
+      # --- Scan the pushed image (still "before deploy") ---
+      # This will FAIL the job on HIGH/CRITICAL findings.
+      # If you prefer not to block deploy, set exit-code: 0.
+      - name: Trivy image scan (ECR)
+        uses: aquasecurity/trivy-action@0.24.0
         with:
           image-ref: ${{ env.IMAGE_URI }}
-          format: table
-          exit-code: "1"
-          severity: "HIGH,CRITICAL"
+          format: sarif
+          output: trivy-image.sarif
+          severity: CRITICAL,HIGH
           ignore-unfixed: true
+          exit-code: 1
 
-      - name: Push image
-        run: docker push "${IMAGE_URI}"
-
-      # Deploy by updating the tag Terraform uses for kubernetes_deployment.tasky
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+      - name: Upload Trivy SARIF to GitHub Security tab
+        if: always()
+        uses: github/codeql-action/upload-sarif@v3
         with:
-          terraform_version: 1.6.6
+          sarif_file: trivy-image.sarif
 
-      - name: Terraform init + apply (update image tag)
-        working-directory: terraform
+      # --- Deploy to EKS (only runs if scan passed) ---
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v4
+        with:
+          version: v1.29.0
+
+      - name: Configure kubeconfig
         run: |
-          terraform init -input=false
-          terraform apply -auto-approve -input=false -var="tasky_image_tag=${{ github.sha }}"
+          aws eks update-kubeconfig \
+            --name "${{ env.EKS_CLUSTER_NAME }}" \
+            --region "${{ secrets.AWS_REGION || env.AWS_REGION }}"
+
+      - name: Deploy (set image)
+        run: |
+          kubectl -n "${{ env.K8S_NAMESPACE }}" set image \
+            deployment/"${{ env.DEPLOYMENT_NAME }}" \
+            "${{ env.CONTAINER_NAME }}"="${IMAGE_URI}"
+
+          kubectl -n "${{ env.K8S_NAMESPACE }}" rollout status deployment/"${{ env.DEPLOYMENT_NAME }}" --timeout=180s
+
+      # --- Quick proof for demo: wizexercise.txt exists ---
+      # If your label isn't app=tasky, update the selector.
+      - name: Verify wizexercise.txt exists in running pod
+        run: |
+          POD="$(kubectl -n "${{ env.K8S_NAMESPACE }}" get pods -l app=tasky -o jsonpath='{.items[0].metadata.name}')"
+          echo "Pod: $POD"
+          kubectl -n "${{ env.K8S_NAMESPACE }}" exec "$POD" -- sh -lc 'ls -l /app/wizexercise.txt && echo "---" && cat /app/wizexercise.txt'
