--- a/.github/workflows/iac.yml
+++ b/.github/workflows/iac.yml
@@ -1,11 +1,12 @@
 name: iac-terraform-ci
 
 on:
-  pull_request:
+  push:
+    branches: ["main"]
     paths:
       - "terraform/**"
       - ".github/workflows/iac.yml"
-  push:
+  pull_request:
     branches: ["main"]
     paths:
       - "terraform/**"
@@ -13,17 +14,13 @@ on:
   workflow_dispatch: {}
 
 permissions:
-  id-token: write
   contents: read
+  id-token: write
   security-events: write
-
-concurrency:
-  group: iac-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   plan-and-scan:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     defaults:
       run:
         shell: bash
@@ -33,23 +30,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # --- AWS auth via OIDC (no static keys) ---
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ secrets.AWS_REGION || 'us-east-1' }}
+          aws-region: ${{ secrets.AWS_REGION != '' && secrets.AWS_REGION || 'us-east-1' }}
+          audience: sts.amazonaws.com
+          output-env-credentials: true
 
       - name: Verify AWS identity
         run: aws sts get-caller-identity
 
-      # --- Secret scanning in CI (replaces GitHub Advanced Security on private personal repos) ---
-      - name: Gitleaks secret scan
+      - name: Gitleaks scan
         uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # --- Terraform tooling ---
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
@@ -64,31 +60,30 @@ jobs:
       - name: Terraform validate
         run: terraform validate -no-color
 
-      # --- TFLint ---
       - name: Setup TFLint
         uses: terraform-linters/setup-tflint@v4
 
       - name: TFLint init
         run: tflint --init
 
-      - name: TFLint run
-        run: tflint -f compact
+      # ✅ CHANGED: soft-fail so warnings don't break the pipeline
+      - name: TFLint run (soft-fail)
+        run: |
+          tflint -f compact || true
 
-      # --- IaC security scans (soft-fail so you can still proceed, but you get findings) ---
-      - name: tfsec (IaC scan)
+      - name: tfsec (soft-fail)
         uses: aquasecurity/tfsec-action@v1.0.3
         with:
           working_directory: terraform
-          additional_args: --soft-fail
+          additional_args: --no-color
+        continue-on-error: true
 
-      - name: Checkov (IaC scan)
+      - name: checkov (soft-fail)
         uses: bridgecrewio/checkov-action@v12
         with:
           directory: terraform
           framework: terraform
-          quiet: true
-          soft_fail: true
+        continue-on-error: true
 
-      # --- Plan only (no apply; protects your existing sandbox infra) ---
       - name: Terraform plan
         run: terraform plan -no-color -input=false
