Fix for broken CI/CD

--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -1,12 +1,12 @@
 name: app-build-scan-push-deploy
 
 on:
-  push:
+  pull_request:
     branches: ["main"]
     paths:
       - "tasky-main/**"
       - ".github/workflows/app.yml"
-  pull_request:
+  push:
     branches: ["main"]
     paths:
       - "tasky-main/**"
@@ -14,15 +14,16 @@ on:
   workflow_dispatch: {}
 
 permissions:
-  contents: read
   id-token: write
+  contents: read
   security-events: write
 
 jobs:
-  build-scan-push-deploy:
-    runs-on: ubuntu-24.04
+  build_scan_push_deploy:
+    runs-on: ubuntu-latest
+
     env:
-      AWS_REGION: ${{ secrets.AWS_REGION != '' && secrets.AWS_REGION || 'us-east-1' }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
       EKS_CLUSTER_NAME: wiz-exercise
       ECR_REPO: wiz-exercise-tasky
       K8S_NAMESPACE: tasky
@@ -36,68 +37,53 @@ jobs:
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ env.AWS_REGION }}
-          audience: sts.amazonaws.com
-          output-env-credentials: true
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Verify AWS identity
         run: aws sts get-caller-identity
 
-      - name: Get AWS Account ID
-        id: acct
-        run: echo "AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)" >> "$GITHUB_OUTPUT"
-
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build image with Buildah
-        uses: redhat-actions/buildah-build@v2
+      - name: Set image uri
+        id: img
+        run: |
+          ACCOUNT_ID="$(aws sts get-caller-identity --query Account --output text)"
+          IMAGE_URI="${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}:${GITHUB_SHA}"
+          echo "IMAGE_URI=${IMAGE_URI}" >> "$GITHUB_ENV"
+          echo "image=${IMAGE_URI}" >> "$GITHUB_OUTPUT"
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build & push image
+        uses: docker/build-push-action@v6
         with:
           context: ./tasky-main
-          containerfiles: ./tasky-main/Dockerfile
-          image: ${{ env.ECR_REPO }}
+          file: ./tasky-main/Dockerfile
+          push: true
+          build-args: |
+            GIT_SHA=${{ github.sha }}
           tags: |
-            ${{ github.sha }}
-            latest
-          oci: false
-          tls-verify: true
+            ${{ steps.img.outputs.image }}
+            ${{ steps.img.outputs.image }}-latest
 
-      - name: Push image to ECR
-        id: push
-        run: |
-          ACCOUNT_ID="${{ steps.acct.outputs.AWS_ACCOUNT_ID }}"
-          REGION="${AWS_REGION}"
-          ECR_URI="${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com"
-          IMAGE_URI="${ECR_URI}/${ECR_REPO}:${GITHUB_SHA}"
-
-          # Tag local buildah image and push
-          buildah tag "${ECR_REPO}:${GITHUB_SHA}" "${IMAGE_URI}"
-          buildah push "${IMAGE_URI}"
-
-          echo "IMAGE_URI=${IMAGE_URI}" >> "$GITHUB_ENV"
-          echo "Pushed ${IMAGE_URI}"
-
-      # ✅ CHANGED: Trivy no longer fails the pipeline (exit-code: 0)
       - name: Trivy image scan (report-only)
         uses: aquasecurity/trivy-action@0.24.0
         with:
-          image-ref: ${{ env.IMAGE_URI }}
+          image-ref: ${{ steps.img.outputs.image }}
           format: sarif
-          output: trivy-image.sarif
-          severity: CRITICAL,HIGH
-          ignore-unfixed: true
-          exit-code: 0
-          scan-type: image
+          output: trivy.sarif
           vuln-type: os,library
-
-      # ✅ CHANGED: best-effort SARIF upload so GitHub perms won't break the workflow
-      - name: Upload Trivy SARIF (best effort)
-        if: always()
+          severity: CRITICAL,HIGH
         continue-on-error: true
+
+      - name: Upload Trivy SARIF (best effort)
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: trivy-image.sarif
+          sarif_file: trivy.sarif
+        continue-on-error: true
 
       - name: Install kubectl
         uses: azure/setup-kubectl@v4
@@ -110,7 +96,7 @@ jobs:
       - name: Deploy updated image to Kubernetes
         run: |
           kubectl -n "${K8S_NAMESPACE}" set image "deployment/${DEPLOYMENT_NAME}" \
-            "${CONTAINER_NAME}=${IMAGE_URI}" --record
+            "${CONTAINER_NAME}=${IMAGE_URI}"
 
           kubectl -n "${K8S_NAMESPACE}" rollout status "deployment/${DEPLOYMENT_NAME}" --timeout=300s
 
