--- a/tasky-main/Dockerfile
+++ b/tasky-main/Dockerfile
@@ -10,7 +10,8 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /go/src/tasky/tasky
 FROM alpine:3.17.0 as release
 
 WORKDIR /app
-RUN echo "Kabilan Veerasingam" > /app/wizexercise.txt
+ARG GIT_SHA=dev
+RUN printf "Kabilan Veerasingam\nbuild=%s\n" "$GIT_SHA" > /app/wizexercise.txt
 COPY --from=build  /go/src/tasky/tasky .
 COPY --from=build  /go/src/tasky/assets ./assets
 EXPOSE 8080
