--- a/.github/workflows/iac.yml
+++ b/.github/workflows/iac.yml
@@ -23,7 +23,6 @@ jobs:
     name: Terraform Scan + Plan
     runs-on: ubuntu-latest
 
-    # IMPORTANT: set permissions at JOB level so id-token definitely applies
     permissions:
       id-token: write
       contents: read
@@ -69,7 +68,7 @@ jobs:
         with:
           terraform_version: 1.6.6
 
-      - name: Terraform fmt (check)
+      - name: Terraform fmt
         run: terraform fmt -check -recursive
 
       - name: Terraform init
@@ -78,10 +77,10 @@ jobs:
       - name: Terraform validate
         run: terraform validate -no-color
 
-      - name: TFLint
+      - name: Setup TFLint
         uses: terraform-linters/setup-tflint@v4
 
-      - name: TFLint run
+      - name: Run TFLint
         run: |
           tflint --init
           tflint -f compact
@@ -101,7 +100,7 @@ jobs:
         continue-on-error: true
 
       - name: Terraform plan
-        run: terraform plan -no-color -input=false -out=tfplan
+        run: terraform plan -input=false -no-color -out=tfplan
 
       - name: Upload plan artifact
         uses: actions/upload-artifact@v4
