--- a/.github/workflows/iac.yml
+++ b/.github/workflows/iac.yml
@@ -17,6 +17,8 @@ on:
         description: "Set to true to apply (requires approval). Otherwise plan only."
         required: true
         default: "false"
+        type: choice
+        options: ["false", "true"]
 
 jobs:
   terraform:
@@ -29,15 +31,14 @@ jobs:
       pull-requests: write
       security-events: write
 
-    defaults:
-      run:
-        working-directory: terraform
-
     env:
       TF_IN_AUTOMATION: "true"
       AWS_REGION: ${{ secrets.AWS_REGION }}
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Fail fast if required secrets are missing
         run: |
           if [ -z "${{ secrets.AWS_REGION }}" ]; then
@@ -49,9 +50,6 @@ jobs:
             exit 1
           fi
           echo "Secrets look present (values are masked)."
-
-      - name: Checkout
-        uses: actions/checkout@v4
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
@@ -69,18 +67,23 @@ jobs:
           terraform_version: 1.6.6
 
       - name: Terraform fmt
+        working-directory: terraform
         run: terraform fmt -check -recursive
 
-      - name: Terraform init
-        run: terraform init -input=false
+      # SAFE DEFAULT: don't try to use your local state/backend in CI
+      - name: Terraform init (no backend)
+        working-directory: terraform
+        run: terraform init -backend=false -input=false
 
       - name: Terraform validate
+        working-directory: terraform
         run: terraform validate -no-color
 
       - name: Setup TFLint
         uses: terraform-linters/setup-tflint@v4
 
       - name: Run TFLint
+        working-directory: terraform
         run: |
           tflint --init
           tflint -f compact
@@ -99,18 +102,13 @@ jobs:
           framework: terraform
         continue-on-error: true
 
-      - name: Terraform plan
-        run: terraform plan -input=false -no-color -out=tfplan
-
-      - name: Upload plan artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: tfplan
-          path: terraform/tfplan
+      - name: Terraform plan (safe, backend disabled)
+        working-directory: terraform
+        run: terraform plan -input=false -no-color
 
   apply:
     name: Terraform Apply (manual + approval)
-    if: ${{ github.event_name == 'workflow_dispatch' && inputs.apply == 'true' }}
+    if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.apply == 'true' }}
     needs: terraform
     runs-on: ubuntu-latest
     environment: prod
@@ -119,11 +117,10 @@ jobs:
       id-token: write
       contents: read
 
-    defaults:
-      run:
-        working-directory: terraform
-
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Fail fast if required secrets are missing
         run: |
           if [ -z "${{ secrets.AWS_REGION }}" ]; then
@@ -134,9 +131,6 @@ jobs:
             echo "Missing required secret: AWS_ROLE_TO_ASSUME"
             exit 1
           fi
-
-      - name: Checkout
-        uses: actions/checkout@v4
 
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
@@ -150,14 +144,12 @@ jobs:
         with:
           terraform_version: 1.6.6
 
+      # IMPORTANT:
+      # Only enable apply once your Terraform state is in an S3 backend.
       - name: Terraform init
+        working-directory: terraform
         run: terraform init -input=false
 
-      - name: Download plan artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: tfplan
-          path: terraform
-
       - name: Terraform apply
-        run: terraform apply -input=false -auto-approve tfplan
+        working-directory: terraform
+        run: terraform apply -input=false -auto-approve
