--- a/.github/workflows/iac.yml
+++ b/.github/workflows/iac.yml
@@ -11,72 +11,23 @@ on:
     paths:
       - "terraform/**"
       - ".github/workflows/iac.yml"
-  workflow_dispatch:
-    inputs:
-      apply:
-        description: "Set to true to apply (requires approval). Otherwise plan only."
-        required: true
-        default: "false"
-        type: choice
-        options: ["false", "true"]
 
 jobs:
-  terraform:
-    name: Terraform Scan + Plan
+  terraform_ci_safe:
+    name: Terraform fmt/validate + IaC scans (safe)
     runs-on: ubuntu-latest
 
     permissions:
-      id-token: write
       contents: read
-      pull-requests: write
       security-events: write
 
     defaults:
       run:
         working-directory: terraform
 
-    env:
-      TF_IN_AUTOMATION: "true"
-      AWS_REGION: ${{ secrets.AWS_REGION }}
-
-      # Required Terraform inputs for GitHub OIDC role (provided via GitHub repo Variables)
-      TF_VAR_github_org: ${{ vars.TF_GITHUB_ORG }}
-      TF_VAR_github_repo: ${{ vars.TF_GITHUB_REPO }}
-
     steps:
-      # IMPORTANT: checkout must come first because we use working-directory: terraform
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Fail fast if required settings are missing
-        run: |
-          if [ -z "${{ secrets.AWS_REGION }}" ]; then
-            echo "Missing required secret: AWS_REGION"
-            exit 1
-          fi
-          if [ -z "${{ secrets.AWS_ROLE_TO_ASSUME }}" ]; then
-            echo "Missing required secret: AWS_ROLE_TO_ASSUME"
-            exit 1
-          fi
-          if [ -z "${{ vars.TF_GITHUB_ORG }}" ]; then
-            echo "Missing required repo variable: TF_GITHUB_ORG"
-            exit 1
-          fi
-          if [ -z "${{ vars.TF_GITHUB_REPO }}" ]; then
-            echo "Missing required repo variable: TF_GITHUB_REPO"
-            exit 1
-          fi
-          echo "Required secrets/vars look present (values are masked)."
-
-      - name: Configure AWS credentials (OIDC)
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          aws-region: ${{ secrets.AWS_REGION }}
-          audience: sts.amazonaws.com
-
-      - name: Verify AWS identity
-        run: aws sts get-caller-identity
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
@@ -86,8 +37,8 @@ jobs:
       - name: Terraform fmt
         run: terraform fmt -check -recursive
 
-      - name: Terraform init
-        run: terraform init -input=false
+      - name: Terraform init (no backend)
+        run: terraform init -backend=false -input=false
 
       - name: Terraform validate
         run: terraform validate -no-color
@@ -114,79 +65,9 @@ jobs:
           framework: terraform
         continue-on-error: true
 
-      - name: Terraform plan
-        run: terraform plan -input=false -no-color -out=tfplan
-
-      - name: Upload plan artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: tfplan
-          path: terraform/tfplan
-
-  apply:
-    name: Terraform Apply (manual + approval)
-    if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.apply == 'true' }}
-    needs: terraform
-    runs-on: ubuntu-latest
-    environment: prod
-
-    permissions:
-      id-token: write
-      contents: read
-
-    defaults:
-      run:
-        working-directory: terraform
-
-    env:
-      TF_IN_AUTOMATION: "true"
-      AWS_REGION: ${{ secrets.AWS_REGION }}
-      TF_VAR_github_org: ${{ vars.TF_GITHUB_ORG }}
-      TF_VAR_github_repo: ${{ vars.TF_GITHUB_REPO }}
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Fail fast if required settings are missing
+      - name: Note about plan/apply
         run: |
-          if [ -z "${{ secrets.AWS_REGION }}" ]; then
-            echo "Missing required secret: AWS_REGION"
-            exit 1
-          fi
-          if [ -z "${{ secrets.AWS_ROLE_TO_ASSUME }}" ]; then
-            echo "Missing required secret: AWS_ROLE_TO_ASSUME"
-            exit 1
-          fi
-          if [ -z "${{ vars.TF_GITHUB_ORG }}" ]; then
-            echo "Missing required repo variable: TF_GITHUB_ORG"
-            exit 1
-          fi
-          if [ -z "${{ vars.TF_GITHUB_REPO }}" ]; then
-            echo "Missing required repo variable: TF_GITHUB_REPO"
-            exit 1
-          fi
-
-      - name: Configure AWS credentials (OIDC)
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          aws-region: ${{ secrets.AWS_REGION }}
-          audience: sts.amazonaws.com
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
-
-      - name: Terraform init
-        run: terraform init -input=false
-
-      - name: Download plan artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: tfplan
-          path: terraform
-
-      - name: Terraform apply
-        run: terraform apply -input=false -auto-approve tfplan
+          echo "Skipping terraform plan/apply in CI to avoid drift:"
+          echo "- CI runner has no kubeconfig for kubernetes provider"
+          echo "- CI does not have your local terraform state"
+          echo "Run plan/apply locally, or migrate state to S3 and add kubeconfig steps."
