--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -18,8 +18,8 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read
       id-token: write
+      contents: read
       security-events: write
 
     env:
@@ -31,9 +31,6 @@ jobs:
       CONTAINER_NAME: tasky
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
       - name: Fail fast if required secrets are missing
         run: |
           if [ -z "${{ secrets.AWS_REGION }}" ]; then
@@ -46,6 +43,9 @@ jobs:
           fi
           echo "Secrets look present (values are masked)."
 
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -56,7 +56,7 @@ jobs:
       - name: Verify AWS identity
         run: aws sts get-caller-identity
 
-      - name: Install Podman
+      - name: Install podman
         run: |
           sudo apt-get update
           sudo apt-get install -y podman
@@ -76,17 +76,20 @@ jobs:
 
           echo "image=${IMAGE_URI}" >> "$GITHUB_OUTPUT"
 
-      - name: Build image (Podman)
+      - name: Build image with Podman (includes GIT SHA in wizexercise.txt)
         working-directory: tasky-main
         run: |
-          podman build -t "${IMAGE_URI}" -f Dockerfile .
+          podman build \
+            --build-arg GIT_SHA="${GITHUB_SHA}" \
+            -t "${IMAGE_URI}" \
+            -f Dockerfile .
 
-      - name: Save image tar for Trivy
+      - name: Export image to tar for Trivy
         run: |
           mkdir -p /tmp/images
           podman save -o /tmp/images/tasky-image.tar "${IMAGE_URI}"
 
-      - name: Trivy scan image tar (report-only)
+      - name: Trivy image scan (SARIF, report-only)
         uses: aquasecurity/trivy-action@0.28.0
         with:
           input: /tmp/images/tasky-image.tar
@@ -95,21 +98,23 @@ jobs:
           vuln-type: os,library
           severity: CRITICAL,HIGH
           exit-code: "0"
+        continue-on-error: true
 
-      # BEST-EFFORT ONLY — NEVER FAILS THE PIPELINE
-      - name: Upload Trivy SARIF (best-effort)
+      # IMPORTANT: Many repos (esp. PR context) can't upload SARIF due to permissions.
+      # This is best-effort and push-only so your pipeline stays green.
+      - name: Upload Trivy SARIF (best-effort, push-only)
         if: github.event_name == 'push'
         uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: trivy.sarif
         continue-on-error: true
 
-      - name: Login to Amazon ECR (Podman)
+      - name: Login to Amazon ECR (podman)
         run: |
           aws ecr get-login-password --region "${AWS_REGION}" \
             | podman login --username AWS --password-stdin "${ECR_REGISTRY}"
 
-      - name: Push image (Podman)
+      - name: Push image to ECR (SHA + latest)
         run: |
           podman push "${IMAGE_URI}"
           podman tag "${IMAGE_URI}" "${IMAGE_URI_LATEST}"
@@ -130,7 +135,7 @@ jobs:
 
           kubectl -n "${K8S_NAMESPACE}" rollout status "deployment/${DEPLOYMENT_NAME}" --timeout=300s
 
-      - name: Verify wizexercise.txt exists
+      - name: Verify wizexercise.txt exists (and print it)
         run: |
           echo "Pods (with labels):"
           kubectl -n "${K8S_NAMESPACE}" get pods --show-labels || true
