--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -18,9 +18,10 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      id-token: write
       contents: read
+      id-token: write
       security-events: write
+      actions: read # REQUIRED for upload-sarif to read workflow run metadata
 
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -56,7 +57,7 @@ jobs:
       - name: Verify AWS identity
         run: aws sts get-caller-identity
 
-      - name: Install podman
+      - name: Install Podman
         run: |
           sudo apt-get update
           sudo apt-get install -y podman
@@ -76,7 +77,7 @@ jobs:
 
           echo "image=${IMAGE_URI}" >> "$GITHUB_OUTPUT"
 
-      - name: Build image with Podman (includes GIT SHA in wizexercise.txt)
+      - name: Build image with Podman (inject commit SHA)
         working-directory: tasky-main
         run: |
           podman build \
@@ -100,8 +101,7 @@ jobs:
           exit-code: "0"
         continue-on-error: true
 
-      # IMPORTANT: Many repos (esp. PR context) can't upload SARIF due to permissions.
-      # This is best-effort and push-only so your pipeline stays green.
+      # BEST-EFFORT: WILL NOT FAIL DEPLOY EVEN IF GITHUB BLOCKS CODE SCANNING
       - name: Upload Trivy SARIF (best-effort, push-only)
         if: github.event_name == 'push'
         uses: github/codeql-action/upload-sarif@v4
@@ -109,7 +109,7 @@ jobs:
           sarif_file: trivy.sarif
         continue-on-error: true
 
-      - name: Login to Amazon ECR (podman)
+      - name: Login to Amazon ECR (Podman)
         run: |
           aws ecr get-login-password --region "${AWS_REGION}" \
             | podman login --username AWS --password-stdin "${ECR_REGISTRY}"
@@ -135,7 +135,7 @@ jobs:
 
           kubectl -n "${K8S_NAMESPACE}" rollout status "deployment/${DEPLOYMENT_NAME}" --timeout=300s
 
-      - name: Verify wizexercise.txt exists (and print it)
+      - name: Verify wizexercise.txt exists
         run: |
           echo "Pods (with labels):"
           kubectl -n "${K8S_NAMESPACE}" get pods --show-labels || true
