--- a/.github/workflows/iac.yml
+++ b/.github/workflows/iac.yml
@@ -103,17 +103,22 @@ jobs:
         with:
           sarif_file: trivy-iac.sarif
 
-      # Provide required terraform variables + ensure CI matches deployed state (ci.tfvars)
+      # Provide required terraform variables via TF_VAR_* (no committed tfvars files)
+      # Also force enable flags to match the already-deployed environment so CI doesn't plan destroys.
       - name: Terraform plan
         if: ${{ github.event_name != 'workflow_dispatch' || inputs.tf_action == 'plan' }}
         env:
           TF_VAR_github_org: ${{ github.repository_owner }}
           TF_VAR_github_repo: ${{ github.event.repository.name }}
-        run: terraform plan -no-color -var-file=ci.tfvars
+          TF_VAR_create_guardduty_detector: "true"
+          TF_VAR_enable_securityhub: "true"
+        run: terraform plan -no-color
 
       - name: Terraform apply (manual)
         if: ${{ github.event_name == 'workflow_dispatch' && inputs.tf_action == 'apply' }}
         env:
           TF_VAR_github_org: ${{ github.repository_owner }}
           TF_VAR_github_repo: ${{ github.event.repository.name }}
-        run: terraform apply -auto-approve -var-file=ci.tfvars
+          TF_VAR_create_guardduty_detector: "true"
+          TF_VAR_enable_securityhub: "true"
+        run: terraform apply -auto-approve
